Less Guava, more Java